--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -324,7 +324,7 @@
     <div id="main_detail__review__contents">
     {% for review in reviews %}
     {% if review.user == request.user %}
-    <div id="main_detail__review__contents_mine">
+    <div id="main_detail__review__contents_mine__{{review.id}}">
       <div id="main_detail__review__each__contents__{{review.id}}">
         <div class="main_detail__review__contents_top">
           <div class="post_review__contents_box__user_info">
@@ -639,10 +639,13 @@
   rvwDelete.onreadystatechange = () => {
       if (rvwDelete.readyState === XMLHttpRequest.DONE){
           if(rvwDelete.status < 400){
-              const {id} = JSON.parse(rvwDelete.response);
-              const topdom = document.getElementById("main_detail__comment__contents__reply");
-              const deletedom = document.getElementById(`main_detail__review__each__contents__${id}`);
+              const {id, len} = JSON.parse(rvwDelete.response);
+              console.log(len)
+              const topdom = document.getElementById("main_detail__review__contents");
+              const deletedom = document.getElementById(`main_detail__review__contents_mine__${id}`);
               topdom.removeChild(deletedom);
+              const rvwLen = document.getElementById('main_detail__review_num')
+              rvwLen.innerHTML = len
           }
       }
   }
