--- a/static/css/post_main_detail.css
+++ b/static/css/post_main_detail.css
@@ -243,11 +243,34 @@
   margin: 10px 0;
 }
 
+#main_detail__comment__btn_revise {
+  background-color: #2253ff;
+  border-style: none;
+  border-radius: 0.5rem;
+  color: white;
+  padding: 1rem 2rem;
+  font-weight: 600;
+  font-size: 0.9rem;
+  margin: 10px 0;
+  margin-right: 10px;
+}
+
+#main_detail__comment_btnplace a {
+  background-color: #bfbfbf;
+  border-style: none;
+  border-radius: 0.5rem;
+  color: white;
+  padding: 1rem 2rem;
+  font-weight: 600;
+  font-size: 0.9rem;
+  margin: 10px 0;
+}
+
 #post_detail__comment__contents__profile {
-	display: flex;
-	padding-bottom: 23px;
-	width: 100%;
-	justify-content: space-between;
+  display: flex;
+  padding-bottom: 23px;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .main_detail__comment__contetns__profile_userinfo {
@@ -260,13 +283,13 @@
 }
 
 #main_detail__comments__contents__name {
-	margin-bottom: 5px;
-	font-size: 16px;
+  margin-bottom: 5px;
+  font-size: 16px;
 }
 
 #main_detail__comments__contents__time {
-	font-size: 10px;
-	color: rgb(162, 162, 162);
+  font-size: 10px;
+  color: rgb(162, 162, 162);
 }
 
 #main_detail__comment__contents {
@@ -275,13 +298,13 @@
 }
 
 .main_detail__comment__each__contents_div {
-	border-bottom: 1px solid rgb(162, 162, 162);
-	padding-top: 23px;
-	padding-bottom: 23px;
+  border-bottom: 1px solid rgb(162, 162, 162);
+  padding-top: 23px;
+  padding-bottom: 15px;
 }
 
 #main_detail__comment__contents h1 {
-	font-size: 16px;
+  font-size: 16px;
 }
 
 #main_detail__comment__contents__tag {
@@ -330,7 +353,36 @@
   padding-top: 10px;
 }
 
+#review_input_box_revise {
+  padding: 0;
+  width: 100%;
+  border: 1px solid rgb(162, 162, 162);
+  border-radius: 5px;
+  resize: none;
+}
+
+#review_input_box_revise::placeholder {
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
 #main_detail__review__btnplace {
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 7px 0 20px;
+}
+
+#main_detail__review__btnplace a {
+  background-color: #bfbfbf;
+  border-style: none;
+  border-radius: 5px;
+  color: white;
+  padding: 10px 20px;
+  font-size: 13px;
+  margin: 10px 0;
+}
+
+#main_detail__review__btnplace_revise {
   display: flex;
   flex-direction: row-reverse;
   padding: 7px 0 20px;
@@ -347,12 +399,27 @@
   margin: 10px 0;
 }
 
+#main_detail__review__btn_revise {
+  background-color: #2253ff;
+  border-style: none;
+  border-radius: 5px;
+  color: white;
+  padding: 10px 20px;
+  font-size: 13px;
+  margin: 10px 0;
+  margin-right: 10px;
+}
+
 #main_detail__review__blank {
   display: flex;
   border-top: 50px;
 }
 
 #main_detail__review__blank_box {
+  display: flex;
+}
+
+#main_detail__review__blank_box_revise {
   display: flex;
 }
 
@@ -383,6 +450,22 @@
   position: relative;
 }
 
+#main_detail__review__uploadbtn_revise {
+  width: 100%;
+  height: 100%;
+  color: rgba(0, 0, 0, 0.44);
+  background: rgb(162, 162, 162);
+  border: 1px solid rgb(162, 162, 162);
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+  padding: 0 20%;
+  position: relative;
+}
+
 #main_detail__review__uploadbtn h1 {
   font-size: 30px;
 }
@@ -392,7 +475,20 @@
   font-size: 10px;
 }
 
+#main_detail__review__uploadbtn_revise h1 {
+  font-size: 30px;
+}
+
+#main_detail__review__uploadbtn_revise p {
+  margin-top: 10px;
+  font-size: 10px;
+}
+
 #main_detail__review__upload_file {
+  display: none;
+}
+
+#main_detail__review__upload_file_revise {
   display: none;
 }
 /* 여기까지 main_detail 리뷰 파트 */
@@ -511,7 +607,7 @@
 }
 
 #main_detail__comment__contents__reply {
-	margin-top: 0px;
+  margin-top: 0px;
 }
 
 /* 모집 완료 모달창 만들어주기 */
@@ -779,172 +875,217 @@
 
 /* 대댓글 css */
 
-.main_detail__comment__contents__reply_bundle {
-	display: flex;
-	margin: 10px;
-}
-
 .reply_user_name {
-	font-size: 16px;
-	display: flex;
-	align-items: center;
-	gap: 0.5rem;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .reply_txt {
-	margin: 1rem 0 1rem 1.5rem;
+  margin: 1rem 0 1rem 1.5rem;
 }
 
 .main_detail_comment_reply_btn {
-	border: 1px solid #8c8c8c;
-	display: inline-block;
-	padding: 5px;
-	margin-top: 10px;
+  border: 1px solid #8c8c8c;
+  display: inline-block;
+  padding: 5px;
+  margin-top: 19px;
 }
 
 .main_detail_comment_reply_btn button {
-	color: #8c8c8c;
+  color: #8c8c8c;
 }
 
 .main_detail_commnet_reply_form {
-	margin-top: 10px;
+  margin-top: 15px;
 }
 
 .main_detail_commnet_reply_form form {
-	border-top: 1px solid #bfbfbf;
-	border-bottom: 1px solid #bfbfbf;
+  border-top: 1px solid #bfbfbf;
+  border-bottom: 1px solid #bfbfbf;
 }
 
 .main_detail_commnet_reply_form textarea {
-	resize: none;
-	width: 100%;
-	height: 150px;
-	padding: 1rem;
+  resize: none;
+  width: 100%;
+  height: 150px;
+  padding: 1rem;
 }
 
 .main_detail_commnet_reply_form form {
-	padding: 3rem;
-	background-color: #f5f5f5;
+  padding: 3rem;
+  background-color: #f5f5f5;
 }
 
 .main_detail_commnet_reply_form input {
-	background-color: #2253ff;
-	color: white;
-	padding: 10px 15px;
-	border: none;
-	border-radius: 5px;
-	margin-top: 5px;
+  background-color: #2253ff;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 5px;
 }
 
 .main_detail_commnet_reply_form a {
-	background-color: #bfbfbf;
-	color: white;
-	padding: 7px 15px;
-	border: none;
-	border-radius: 5px;
-	margin-top: 5px;
-	margin-left: 5px;
+  background-color: #bfbfbf;
+  color: white;
+  padding: 7px 15px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-left: 5px;
 }
 
 #main_detail__comment__contents__reply > div {
-	border-top: 1px solid #8c8c8c;
-	/* border-bottom: 1px solid #8c8c8c; */
-	padding: 2rem 0 1rem 3rem;
+  border-top: 1px solid #8c8c8c;
+  /* border-bottom: 1px solid #8c8c8c; */
+  padding: 2rem 0 1rem 3rem;
+  margin-top: 30px;
 }
 
 /*댓글 드롭다운 메튜 작성*/
 
 .main_detail__comments__contents__options {
-	position: relative;
-	display: inline-flex;
-	height: 100%;
-	align-items: center;
-	display: flex;
-	justify-content: center;
+  position: relative;
+  display: inline-flex;
+  height: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .main_detail__comments__contents__options i {
-	margin-top: 23px;
+  margin-top: 23px;
 }
 
-.main_detail__comments__contents__options:hover .main_detail__comments_dropdown_menu {
-	display: block;
+.main_detail__comments__contents__options:hover
+  .main_detail__comments_dropdown_menu {
+  display: block;
 }
 
-.main_detail__comments_dropdown_btn, .main_detail__recomments_dropdown_btn {
-	margin-right: 10px;
-	margin-bottom: 2px;
+.main_detail__comments_dropdown_btn,
+.main_detail__recomments_dropdown_btn {
+  margin-right: 10px;
+  margin-bottom: 2px;
 }
 
 .main_detail__comments__contents__options:hover,
 .main_detail__comments_dropdown_menu_revise button:hover,
 .main_detail__comments_dropdown_menu_delete button:hover {
-	color: #2253ff !important;
+  color: #2253ff !important;
 }
 
-.main_detail__comments__contents__options:hover > .main_detail__comments_dropdown_menu {
-	display: block;
+.main_detail__comments__contents__options:hover
+  > .main_detail__comments_dropdown_menu {
+  display: block;
 }
 
 .main_detail__comments_dropdown_menu {
-	display: block;
-	text-decoration: none;
-	color: rgb(37, 37, 37);
-	font-weight: 400;
-	font-size: 0.9rem;
-	background-color: white;
-	line-height: 25px;
-	text-align: center;
-	position: absolute;
-	opacity: 0;
-	z-index: 1; /*다른 요소들보다 앞에 배치*/
-	width: 4em;
-	top: 100%;
-	padding: 0.5rem 0;
-	box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+  display: block;
+  text-decoration: none;
+  color: rgb(37, 37, 37);
+  font-weight: 400;
+  font-size: 0.9rem;
+  background-color: white;
+  line-height: 25px;
+  text-align: center;
+  position: absolute;
+  opacity: 0;
+  z-index: 1; /*다른 요소들보다 앞에 배치*/
+  width: 4em;
+  top: 100%;
+  padding: 0.5rem 0;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
 }
 
 .main_detail__comments_dropdown_menu_revise:hover {
-	background-color: #e9f7ff;
+  background-color: #e9f7ff;
 }
 
 .main_detail__comments_dropdown_menu_delete:hover {
-	background-color: #e9f7ff;
+  background-color: #e9f7ff;
 }
 
-.main_detail__comments__contents__options:hover .main_detail__comments_dropdown_menu {
-	display: block;
-	opacity: 1;
+.main_detail__comments__contents__options:hover
+  .main_detail__comments_dropdown_menu {
+  display: block;
+  opacity: 1;
 }
 
 /*대댓글 수정, 삭제*/
-.main_detail__recomments_revise_btn {
-	border: 1px solid black;
-	margin-left: 3px;
-	font-size: 13px;
-	padding: 3px;
+.main_detail__recomments__contents__options {
+  position: relative;
+  display: inline-flex;
+  height: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  bottom: 40%;
 }
 
-.main_detail__recomments_delete_btn {
-	border: 1px solid black;
-	margin-left: 3px;
-	font-size: 13px;
-	padding: 3px;
+.main_detail__recomments__contents__options i {
+  margin-top: 23px;
+}
+
+.main_detail__recomments__contents__options:hover
+  .main_detail__recomments_dropdown_menu {
+  display: block;
+}
+
+.main_detail__comments_dropdown_btn,
+.main_detail__recomments_dropdown_btn {
+  margin-right: 10px;
+  margin-bottom: 2px;
+}
+
+.main_detail__recomments__contents__options:hover,
+.main_detail__recomments_dropdown_menu_revise button:hover,
+.main_detail__recomments_dropdown_menu_delete button:hover {
+  color: #2253ff !important;
+}
+
+.main_detail__recomments__contents__options:hover
+  > .main_detail__recomments_dropdown_menu {
+  display: block;
 }
 
 .main_detail__recomments_revise_delete_btn {
-	position: relative;
-	z-index: 1;
-	align-items: flex-end;
-	margin-left: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.main_detail__recomments_revise_delete_btn button {
-	display: flex;
+.main_detail__recomments_dropdown_menu {
+  display: block;
+  text-decoration: none;
+  color: rgb(37, 37, 37);
+  font-weight: 400;
+  font-size: 0.9rem;
+  background-color: white;
+  line-height: 25px;
+  text-align: center;
+  position: absolute;
+  opacity: 0;
+  z-index: 1; /*다른 요소들보다 앞에 배치*/
+  width: 4em;
+  top: 80%;
+  padding: 0.5rem 0;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
 }
 
-.main_detail__comment__contents__reply_bundle:hover .main_detail__recomments_revise_delete_btn {
-	display: flex;
+.main_detail__recomments_dropdown_menu_revise:hover {
+  background-color: #e9f7ff;
+}
+
+.main_detail__recomments_dropdown_menu_delete:hover {
+  background-color: #e9f7ff;
+}
+
+.main_detail__recomments__contents__options:hover
+  .main_detail__recomments_dropdown_menu {
+  display: block;
+  opacity: 1;
 }
 
 /*리뷰 이미지 사이즈*/
@@ -963,7 +1104,7 @@
 .main_detail__review__contents__options {
   position: relative;
   display: inline-flex;
-  height: 100%;
+  height: 50%;
   align-items: center;
   display: flex;
   justify-content: center;
