--- a/place/templates/place/detail.html
+++ b/place/templates/place/detail.html
@@ -159,15 +159,17 @@
               </div>
               <div class="place_detail__comments__contents__options">
                 {% if comment.user == request.user %}
-                <div class="place_detail__comments_dropdown_btn">
-                  <i class="fa-solid fa-ellipsis fa-lg" style="color: #BFBFBF"></i>
-                </div>
-                <div class="place_detail__comments_dropdown_menu">
-                  <div class="place_detail__comments_dropdown_menu_revise">
-                    <button onclick="changeFormPlace({{comment.id}}, '{{comment.content}}');">수정</button>
+                <div>
+                  <div class="place_detail__comments_dropdown_btn">
+                    <i class="fa-solid fa-ellipsis fa-lg" style="color: #BFBFBF"></i>
                   </div>
-                  <div class="place_detail__comments_dropdown_menu_delete">
-                    <button onclick="onClickdeletePlace({{comment.id}});">삭제</button>
+                  <div class="place_detail__comments_dropdown_menu">
+                    <div class="place_detail__comments_dropdown_menu_revise">
+                      <button onclick="changeFormPlace({{comment.id}}, '{{comment.content}}');">수정</button>
+                    </div>
+                    <div class="place_detail__comments_dropdown_menu_delete">
+                      <button onclick="onClickdeletePlace({{comment.id}});">삭제</button>
+                    </div>
                   </div>
                 </div>
                 {% endif%}
@@ -186,16 +188,53 @@
             <div id="place_detail__comment__contents__reply">
               {% for recomment in comment.comment_set.all %}
               <div class="place_detail__comment__contents__reply_bundle__{{recomment.id}}">
-                <div class="place_detail__reply_user_name">ㄴ@{{recomment.user.nickname}}	&nbsp;</div>
+                <div class="place_detail__reply_top">
+                  <div class="place_detail__comment__contetns__profile_userinfo">
+                    <span style="font-size:1.25rem; font-weight: 600;">ㄴ </span>
+                    <div id="place_detail__comment__contents__img">
+                      {% if comment.user.profile_img %}
+                      <img src="{{comment.user.profile_img.url}}" width="45px" alt="profile_img"></img>
+                      {% else %}
+                      <img src="/static/img/moco_symbol.png" width="45px" alt="profile_img"></img>
+                      {% endif %}
+                    </div>
+                    <div id="place_detail__comments__contents__info">
+                      <div id="place_detail__comments__contents__name">
+                        <span>{{comment.user.nickname}}</span>
+                      </div>
+                      <div id="place_detail__comments__contents__time">
+                        <span>{{comment.published_at|date:"Y. m. d" }}</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="place_detail__comments__contents__options">
+                    {% if recomment.user == request.user %}
+                    <div class="place_detail__comments_revise_delete_btn">
+                      <div class="place_detail__comments_dropdown_btn">
+                        <i class="fa-solid fa-ellipsis fa-lg" style="color: #BFBFBF"></i>
+                      </div>
+                      <div class="place_detail__comments_dropdown_menu">
+                        <div class="place_detail__comments_dropdown_menu_revise">
+                          <button onclick="changeForm4Place({{recomment.id}}, '{{recomment.content}}');">수정</button>
+                        </div>
+                        <div class="place_detail__comments_dropdown_menu_delete">
+                          <button onclick="onClickdeleteRecmtPlace({{recomment.id}});">삭제</button>
+                        </div>
+                      </div>
+                    </div>
+                    {% endif%}
+                  </div>
+                </div>
                 <div class="place_detail__reply_txt">{{recomment.content}}</div>
-                <div class="place_detail__recomments_revise_delete_btn">
+                
+                <!-- <div class="place_detail__recomments_revise_delete_btn">                 
                   <div class="place_detail__recomments_revise_btn">
                     <button onclick="changeForm4Place({{recomment.id}}, '{{recomment.content}}');">수정</button>
                   </div>
                   <div class="place_detail__recomments_delete_btn">
                     <button onclick="onClickdeleteRecmtPlace({{recomment.id}});">삭제</button>
                   </div>
-                </div>
+                </div> -->
               </div>
               {% endfor%}
             </div>
