[feat] post 댓글, 후기 css 적용

--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -509,6 +509,7 @@
                           openDelModal2.addEventListener("click", (e) => {
                             delModal2.style.display = "block";
                           });
+                        </script>
 
 <script>
   // 댓글 수정
