--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -314,7 +314,7 @@
                               {%endif%}
                             </div>
                           </label>
-                          <input type="file" name="review_image" id="main_detail__review__upload_file" accept="image/*" onchange="thumbnailImg(event);"/>
+                          <input type="file" name="review_image" class="main_detail__review__upload_file" accept="image/*" onchange="thumbnailImg(event);"/>
                         </div>
                         <textarea name="review_content" id="review_input_box" cols="30" rows="10" placeholder="후기를 입력하세요."></textarea>
                       </div>
@@ -652,6 +652,7 @@
                           // 후기 수정
                           const changeForm3 = (id, content) => {
                             const reviseRvw = document.querySelector(`.main_detail__review__contents_content__${id}`)
+    
     reviseRvw.innerHTML = 
     `<form action="/post/review/revise/${id}" method="post" enctype="multipart/form-data" style="margin: 0 20px">
       {% csrf_token %}
@@ -671,7 +672,7 @@
           <input
             type="file"
             name="review_image"
-            id="main_detail__review__upload_file"
+            class="main_detail__review__upload_file"
             accept="image/*"
             onchange="thumbnailImg(event);"
           />
