--- a/static/css/place_home.css
+++ b/static/css/place_home.css
@@ -4,7 +4,7 @@
 	font-family: 'Noto Sans', sans-serif;
 	font-family: 'Noto Sans KR', sans-serif;
 	font-weight: 600;
-	font-size: 1.5rem;
+	font-size: 22px;
 	margin-right: auto;
 }
 
