--- a/static/css/post_main_detail.css
+++ b/static/css/post_main_detail.css
@@ -30,7 +30,7 @@
 }
 
 #main__detail__top_left__ul__recruit_finish {
-  background-color: #e8e8e8;
+  background-color: #9D9D9D;
   color: black;
   font-size: 13px;
 }
